# hemli

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  mise.toml
scripts/: update-readme-help.sh
src/: cli.rs  error.rs  index.rs  main.rs  model.rs  source.rs  store.rs
tests/: cli_tests.rs
